# SigmaTeleUr

./: .gitignore  LICENSE  README.md  camera_datasample.py  camera_datashow.py  camera_h52csv.py  const.py  master_sigma.py  rob_h52csv.py  rob_trajshow.py  slave_ur.py
configs/: record_ur10e.yaml
data_process/: camera_datashow.py  data2lerobot.py  data_assemble.py  rob_trajshow.py
lerobot/: lerobot_data_viz.py  lerobot_find_cameras.py  lerobot_record.py  lerobot_replay.py
robots/lerobot_camera_orbbec/: pyproject.toml
robots/lerobot_camera_orbbec/lerobot_camera_orbbec/: __init__.py  camera_orbbec.py  configuration_orbbec.py  test.py
robots/lerobot_policy_random/: pyproject.toml
robots/lerobot_policy_random/lerobot_policy_random/: __init__.py  configuration_random.py  modeling_random.py  processor_random.py
robots/lerobot_robot_ur10e/: pyproject.toml
robots/lerobot_robot_ur10e/lerobot_robot_ur10e/: __init__.py  config_ur10e.py  test.py  ur10e.py
tasks/: master_sigma.py  replay_ur.py  slave_ur.py
utilize/: const.py
