[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_camera_orbbec"
version = "0.0.1"
description = "Orbbec camera integration for LeRobot"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
#  "opencv-python",
  "pyorbbecsdk2",
  "numpy",
  "lerobot>=0.4",  # 确保 LeRobot 版本支持插件系统
]

[tool.setuptools]
packages = ["lerobot_camera_orbbec"]

[tool.setuptools.package-data]