[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_random"
version = "0.0.1"
description = "Random policy for LeRobot"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
#    "lerobot>=0.4"
]

[tool.setuptools]
packages = ["lerobot_policy_random"]

[tool.setuptools.package-data]